--- a/common.fi.po
+++ b/common.fi.po
@@ -13,6 +13,7 @@
 # Jonas Sahlberg <fragthelion@gmail.com>, 2015
 # LINUX SAUNA, 2022
 # LINUX-SAUNA, 2022
+# LINUX-SAUNA, 2022
 # Oi Suomi On! <oisuomion@protonmail.com>, 2020,2022
 msgid ""
 msgstr ""
@@ -20,7 +21,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-07-24 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: LINUX-SAUNA, 2022\n"
+"Last-Translator: Oi Suomi On! <oisuomion@protonmail.com>, 2020,2022\n"
 "Language-Team: Finnish (http://www.transifex.com/team-xonotic/xonotic/"
 "language/fi/)\n"
 "Language: fi\n"
