--- a/common.pt_BR.po
+++ b/common.pt_BR.po
@@ -18,7 +18,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-18 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: zerowhy . <anymailz@tutanota.com>, 2021\n"
+"Last-Translator: yy0zz, 2021-2022\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/team-xonotic/"
 "xonotic/language/pt_BR/)\n"
 "Language: pt_BR\n"
@@ -507,11 +507,11 @@ msgstr "Misturar as equipes"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:873
 msgid "Server's custom quickmenu"
-msgstr ""
+msgstr "Menu rápido personalizado do servidor"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:875
 msgid "Waypoint editor quickmenu"
-msgstr ""
+msgstr "Menu rápido do editor de ponto de interesse"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:881
 msgid "QMCMD^Spectate a player"
@@ -1038,7 +1038,7 @@ msgstr "^7Aperte ^3%s^7 para autosselecionar uma equipe e entrar"
 #: qcsrc/client/hud/panel/scoreboard.qc:2272
 #, c-format
 msgid "^7Press ^3%s ^7to select a specific team"
-msgstr "^7Press ^3%s^7 para especificar uma equipe"
+msgstr "^7Aperte ^3%s^7 para especificar uma equipe"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:2283
 #, c-format
